--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <h2>Renata Uzêda da Silva</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Desenvolvedo Web Front End</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Desenvolvedor Web Front End</p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>São João de Meriti/Rj - Brasil</p>
               <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>renatauzedasilva@gmail.com</p>
               <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>Zap +5521965841038</p>
@@ -45,7 +45,7 @@
               <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
               <p>JavaScript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
               </div>
               <p>HTML</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
